--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css">  
+  <link rel="shortcut icon" href="https://findicons.com/files/icons/480/weather/128/rainbow.png" type="image/x-icon">
   <title>Trocando cores com CSS(sem JS)</title>
 </head>
 
